--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="main-container">
   <div id="header" class="head-view">
     <app-navigation [title]="title"></app-navigation>
-    <app-carousel style="display: flex; flex: 1 1 auto"></app-carousel>
-    <app-jumbotron style="padding-bottom: 1rem" [title]="title"></app-jumbotron>
+    <app-carousel></app-carousel>
+    <app-jumbotron [title]="title"></app-jumbotron>
   </div>
   <div id="content">
     <app-card-group></app-card-group>
