--- a/src/styling/utilities/_utilities.scss
+++ b/src/styling/utilities/_utilities.scss
@@ -1,6 +1,7 @@
 $primary-clr: #fcfffd;
 $secondary-clr: #daffef;
 $cardfooter-clr: aliceblue;
+$active-clr: #17a2b8;
 
 $btn-colors: (
   "success": #28a745,
