--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,8 +1,8 @@
 <div class="carousel-container">
   <div class="slider">
     <div>
-      <div class="leftArrow" (click)="goToPrevious()">❰</div>
-      <div class="rightArrow" (click)="goToNext()">❱</div>
+      <div class="leftArrow" (click)="clickGoToPrevious()">❰</div>
+      <div class="rightArrow" (click)="clickGoToNext()">❱</div>
     </div>
     <div class="slide" [ngStyle]="{ 'background-image': getCurrentSlideURL() }">
       <div class="overlay">
@@ -10,9 +10,10 @@
         <p>{{ slides[currentIndex].overview }}</p>
         <div class="dotsContainer">
           <div
-            *ngFor="let slide of slides; let slideIndex = index"
-            (click)="goToSlide(slideIndex)"
+            *ngFor="let slide of slides; let i = index"
+            (click)="clickGoToSlide(i)"
             class="dot"
+            id="{{ i === currentIndex && 'active' }}"
           >
             ●
           </div>
