--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -1,10 +1,10 @@
 @import "../../styling/utilities/utilities";
-$color_1: #fff;
 
 .carousel-container {
   @include flexContainer(column);
   min-height: 250px;
   flex: 1 1 auto;
+  color: $primary-clr;
 
   .slider {
     position: relative;
@@ -17,7 +17,6 @@ $color_1: #fff;
       transform: translate(0, -50%);
       right: 32px;
       font-size: 45px;
-      color: $color_1;
       z-index: 1;
       cursor: pointer;
     }
@@ -27,7 +26,6 @@ $color_1: #fff;
       transform: translate(0, -50%);
       left: 32px;
       font-size: 45px;
-      color: $color_1;
       z-index: 1;
       cursor: pointer;
     }
@@ -38,10 +36,10 @@ $color_1: #fff;
       border-radius: 10px;
       background-size: cover;
       background-position: center;
-      color: $color_1;
       @include flexContainer(column, flex-end);
       flex: 1 1 auto;
       overflow: hidden;
+      transition: all 0.5s ease;
 
       .overlay {
         @include flexContainer(column);
@@ -53,6 +51,7 @@ $color_1: #fff;
           padding: 1rem;
         }
         p {
+          display: flex;
           align-self: center;
           margin: 1rem;
         }
@@ -65,6 +64,10 @@ $color_1: #fff;
             margin: 0 3px;
             cursor: pointer;
             font-size: 20px;
+          }
+
+          #active {
+            color: $active-clr;
           }
         }
       }
