--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,9 @@
 @import "../styling/utilities/utilities";
 
+app-navigation {
+  margin-bottom: 1rem;
+}
+
 app-carousel {
   display: flex;
   flex: 1 1 auto;
